fix: Cambiar a removeFirst